--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,4 +1,4 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Lacquer&display=swap');
 
-
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap');
